--- a/Projeto/src/pages/Notepad/notepad.module.css
+++ b/Projeto/src/pages/Notepad/notepad.module.css
@@ -92,8 +92,7 @@ textarea:focus, input:focus {
     color: var(--white);
     transition: 0.4s ease, transform 0.2s ease;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.15); 
-    width: 100%;
-    max-width: 300px; 
+    width: 50%;
 }
 .notepadButtonCancel {
     text-transform: uppercase;
@@ -107,8 +106,7 @@ textarea:focus, input:focus {
     color: var(--white);
     transition: 0.4s ease, transform 0.2s ease;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.15);
-    width: 100%;
-    max-width: 300px;
+    width: 50%;
 }
 .notepadButton:hover {
     background: linear-gradient(145deg, var(--gold-dark), var(--gold)); 
@@ -198,8 +196,23 @@ button {
     gap: 10px;
      
 }
-
 .notepadSave {
     margin-top: 2rem;
     color: white;
+}
+@media(max-width:638px){
+    .container{
+        font-size: 12px;
+    }
+    .notepad h1 {
+        font-size: 2.5rem;        
+    }
+    .notepadButton,.notepadButtonCancel{
+        padding: 15px 20px;
+        font-size: 12px;
+    }
+    .editar, .excluir, input, textarea{
+        font-size: 12px;
+    }
+      
 }
