--- a/Projeto/src/pages/Notepad/notepad.module.css
+++ b/Projeto/src/pages/Notepad/notepad.module.css
@@ -92,7 +92,7 @@ textarea:focus, input:focus {
     color: var(--white);
     transition: 0.4s ease, transform 0.2s ease;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.15); 
-    width: 50%;
+    width: 18rem;
 }
 .notepadButtonCancel {
     text-transform: uppercase;
@@ -106,7 +106,7 @@ textarea:focus, input:focus {
     color: var(--white);
     transition: 0.4s ease, transform 0.2s ease;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.15);
-    width: 50%;
+    width: 18rem;
 }
 .notepadButton:hover {
     background: linear-gradient(145deg, var(--gold-dark), var(--gold)); 
